found out that the media querie i wrote was syntactically correct but i did not call the class correctly. trying to get the nav and the video to look decent in the viewport sizes less than 767px as the bootstrap class i used breaks the layout below 768px. also need to get the iframe to scale correctly so it is responsive in mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -115,11 +115,11 @@ body {
 	a {
 		color: white;
 	}
-//	@media (max-width: 767px) {
-//		nav-justified > li {
-//			margin-left: 5em;
-//		}
-//	}
+	//	@media (max-width: 767px) {
+	//		nav-justified > li {
+	//			margin-left: 5em;
+	//		}
+	//	}
 }
 
 //Style for the video to be center of page
@@ -151,8 +151,8 @@ input {
 	color: black;
 }
 
-	@media (min-width: 320px) and (max-width: 767px) {
-		nav-justified > li {
-			margin-left: 5em;
-		}
+@media (min-width: 320px) and (max-width: 767px) {
+	.navPills {
+		margin-left: 5em;
 	}
+}
